# piaudioplumber

./: .gitignore  README.md  pyproject.toml
deploy/: setup-pipewire.sh
deploy/config/: classification.yaml  daemon.toml
deploy/systemd/: pap-daemon.service  pap-ha-adapter.service  pap-visualizer.service
src/pap/: __init__.py
src/pap/api/: __init__.py  http.py  schemas.py  ws.py
src/pap/cli/: __init__.py  papctl.py
src/pap/daemon/: __init__.py  control.py  diagnostics.py  graph_watcher.py  main.py  state_store.py
src/pap/model/: __init__.py  events.py  graph.py  source.py
src/pap/plugins/: __init__.py
src/pap/plugins/ha_adapter/: __init__.py  main.py
src/pap/pw/: __init__.py  dump.py  metadata.py  pwlink.py  wpctl.py
tests/: test_api.py  test_pw_dump.py  test_state_store.py  test_volume_resolution.py  test_ws.py
tests/fixtures/: pw_dump_initial.json
web/ui/: index.html  package-lock.json  package.json
web/ui/src/: App.jsx  index.css
web/ui/src/__tests__/: components.test.jsx  utils.test.js
web/ui/src/components/: DiagDrawer.jsx  MasterPanel.jsx  NodeBlock.jsx  PillHandle.jsx
web/ui/src/hooks/: useDaemon.js
web/ui/src/utils/: slots.js
